@@ -1,19 +1,4 @@
-/* This is the placeholder for setting JVM options via sbt native packager.
-You can add or update below JVM options as per application needs.
-
-javaOptions in Universal ++= Seq(
-//   -J params will be added as jvm parameters
-  "-J-Xmx2GB",
-  "-J-Xms2GB",
-//   gc tuning - Enable and change these parameters as per your need
-   "J-XX:+UnlockExperimentalVMOptions",
-   "J-XX:+UnlockDiagnosticVMOptions",
-   "J-XX:+UseG1GC", // this option is enabled by default on jdk9+
-   "J-XX:MaxGCPauseMillis=50", // Sets a target for the maximum GC pause time. This is a soft goal, and the JVM will make its best effort to achieve it
-   "J-Xlog:gc*:file=gc-%%t.log",
-   "J-XX:+UseStringDeduplication",
-)
-*/
+import com.typesafe.sbt.SbtNativePackager.Universal
 
 lazy val aggregatedProjects: Seq[ProjectReference] = Seq(
   `sidetector-assembly`,
@@ -42,5 +27,13 @@ lazy val `sidetector-deploy` = project
   )
   .enablePlugins(JavaAppPackaging, CswBuildInfo)
   .settings(
-    libraryDependencies ++= Dependencies.SidetectorDeploy
+    libraryDependencies ++= Dependencies.SidetectorDeploy,
+    // This is the placeholder for setting JVM options via sbt native packager.
+    // You can add more JVM options below.
+//    javaOptions in Universal ++= Seq(
+//      // -J params will be added as jvm parameters
+//      "-J-Xmx8GB",
+//      "J-XX:+UseG1GC", // G1GC is default in jdk9 and above
+//      "J-XX:MaxGCPauseMillis=30" // Sets a target for the maximum GC pause time. This is a soft goal, and the JVM will make its best effort to achieve it
+//    )
   )
